--- a/student-reg-system/student-reg-system/Views/AdminView.xaml
+++ b/student-reg-system/student-reg-system/Views/AdminView.xaml
@@ -17,79 +17,16 @@
 
     <Border  Background="#EFF2F7" MouseDown="Border_MouseDown" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <Grid >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
 
             <!--Left Menu-->
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-
-
-                <Border Grid.Row="1" Background="#623ED0" Margin="0 50 0 0" CornerRadius="0 50 0 0">
-                    <DockPanel>
-                        <!--Menu Logo-->
-                        <Border Width="80" Height="80" Padding="3" Background="White" CornerRadius="100" DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="20 -30 0 0">
-                            <Ellipse>
-                                <Ellipse.Fill>
-                                    <ImageBrush ImageSource="C:\Users\User\OneDrive\Desktop\Student-sys\student-reg-system\student-reg-system\Images\p1.jpg"/>
-                                </Ellipse.Fill>
-                            </Ellipse>
-                        </Border>
-
-                        <!--Menu Titles-->
-                        <TextBlock Text="{Binding DataContext.UserFullNameObservable}" Foreground="White" FontSize="22" FontWeight="SemiBold" DockPanel.Dock="Top" Margin="5 25 0 10" TextAlignment="Center"/>
-                        <TextBlock Text="{Binding DataContext.UserEmailObservable}" Foreground="White" FontSize="14" FontWeight="SemiBold" DockPanel.Dock="Top" TextAlignment="Center"/>
-
-                        <!--Menu Seprator-->
-                        <Separator Margin="25" Background="#7E5FDC" DockPanel.Dock="Top" Height="0.8"/>
-
-                        <!--Menu Buttons-->
-                        <StackPanel DockPanel.Dock="Top" >
-
-
-                            <Button Style="{StaticResource menuButton}" Click="ShowCalculator">
-                                <StackPanel Orientation="Horizontal">
-                                    <Icon:PackIconMaterial Kind="CalendarClock" Style="{StaticResource menuButtonIcon}"/>
-                                    <TextBlock Text="GPA Calculator" />
-                                </StackPanel>
-                            </Button>
-
-                            <Button Style="{StaticResource menuButton}"  Click="ShowStudentData">
-                                <StackPanel Orientation="Horizontal">
-                                    <Icon:PackIconMaterial Kind="AccountMultipleOutline" Style="{StaticResource menuButtonIcon}"/>
-                                    <TextBlock Text="Users"/>
-                                </StackPanel>
-                            </Button>
-
-
-
-
-                        </StackPanel>
-
-
-                        <Button Style="{StaticResource menuButton}" VerticalAlignment="Bottom" DockPanel.Dock="Bottom" Margin="10 0 5 50" Click="Button_Click">
-                            <StackPanel Orientation="Horizontal">
-                                <Icon:PackIconMaterial Kind="Logout" Style="{StaticResource menuButtonIcon}"/>
-                                <TextBlock Text="Logout"/>
-                            </StackPanel>
-                        </Button>
-
-                    </DockPanel>
-                </Border>
-
-            </Grid>
+            
 
             <StackPanel Orientation="Horizontal" Grid.Column="1">
-                <Button Style="{StaticResource topButton}" Margin="760 -630 20 0" Click="Button_Click_6">
+                <TextBlock></TextBlock>
+                <Button Style="{StaticResource topButton}" Margin="980 -630 20 20" Click="Button_Click_6" RenderTransformOrigin="0.733,0.633">
                     <Icon:PackIconMaterial Kind="WindowMinimize" />
                 </Button>
-                <Button Style="{StaticResource topButton}" Margin="0 -630 0 0" Click="Button_Click_5">
+                <Button Style="{StaticResource topButton}" Margin="0 -630 0 20" Click="Button_Click_5">
                     <Icon:PackIconMaterial  Kind="Close"/>
                 </Button>
 
