--- a/student-reg-system/student-reg-system/Views/UserRegistration.xaml
+++ b/student-reg-system/student-reg-system/Views/UserRegistration.xaml
@@ -28,19 +28,19 @@
 
         <TextBlock   Text="User Registration" FontSize="30" Style="{StaticResource text}" FontWeight="Bold" Foreground="MediumPurple" Height="40" VerticalAlignment="Center" Margin="50 0" HorizontalAlignment="Center"/>
 
-    
 
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
 
-        <!--Left Section-->
-        
-        <Border Padding="30"  Background="White">
-            <!--
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <!--Left Section-->
+
+            <Border Padding="30"  Background="White">
+                <!--
             <Border.Background>
                 <LinearGradientBrush >
                     <GradientStop Color="DarkBlue" Offset="0"/>
@@ -48,69 +48,6 @@
                 </LinearGradientBrush>
             </Border.Background>
         -->
-            <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0">
-
-
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
-        <!--
-                <Canvas>
-                    <Polygon Points="0 20 230 140 8 278" Fill="LavenderBlush" HorizontalAlignment="Center" Canvas.Top="80" VerticalAlignment="Top"/>
-                    <Polygon Points="0 20 20 40 8 50" Fill="DarkSlateBlue" Margin="50 400" />
-                    <Polygon Points="0 20 80 80 8 150" Fill="DarkSlateBlue"  Margin="200 250"/>
-                    <Polygon Points="0 20 50 50 25 15" Fill="DarkSlateBlue" Margin="250 0" />
-
-
-
-                </Canvas>
--->
-               
-                <TextBox Grid.Column="1" Grid.Row="1"   Margin="10 10" VerticalAlignment="Center"  Foreground="#868686" Text="{Binding UserId , Mode=TwoWay}" Width="700" Height="35" Name="t1"/>
-                    <TextBox Grid.Column="1" Grid.Row="4"   Margin="10 10" VerticalAlignment="Center" Foreground="#868686"  Text="{Binding  UserFirstName}" Width="700" Height="35" Name="t2"/>
-                    <TextBox Grid.Column="1" Grid.Row="6"   Margin="10 10" VerticalAlignment="Center" Foreground="#868686" Text="{Binding UserLastName}" Height="35" Name="t3"/>
-
-                    <TextBox Grid.Column="1" Grid.Row="8"   Margin="10 10" VerticalAlignment="Center" Foreground="#868686" Text="{Binding UserEmail}" Height="35" Name="t4"/>
-                    <TextBox Grid.Column="1" Grid.Row="10"  Foreground="#868686" Text="{Binding UserPassword}"  HorizontalAlignment="Left" Width="700" Height="35" Name="t5"/>
-
-                    <TextBlock Grid.Row="0" Text="User ID" Style="{StaticResource text}"  Foreground="SlateGray" Height="30" VerticalAlignment="Top" Margin="10 0"/>
-                <TextBlock Grid.Row="3" Text="First Name" Style="{StaticResource text}"  Foreground="SlateGray" Height="30" VerticalAlignment="Center" Margin="10 0"/>
-                <TextBlock Grid.Row="5" Text="Last Name" Style="{StaticResource text}"  Foreground="SlateGray" Height="30" VerticalAlignment="Center" Margin="10 0"/>
-                <TextBlock Grid.Row="7" Text="Email" Style="{StaticResource text}"  Foreground="SlateGray" Height="30" VerticalAlignment="Center" Margin="10 0"/>
-                    <TextBlock Grid.Row="9" Text="Password" Style="{StaticResource text}" Foreground="SlateGray" Margin="10 0" Height="30"/>
-
-
-
-
-                </Grid>
-
-        </Border>
-
-        <!--Input Section-->
-        <Border Grid.Column="1" Padding="20" MouseDown="Border_MouseDown" Background="White">
-            <!--
-            <Border.Background>
-                
-                <LinearGradientBrush >
-                    <GradientStop Color="DarkBlue" Offset="0"/>
-                    <GradientStop Color="DarkSlateBlue" Offset="1"/>
-                </LinearGradientBrush>
-               
-            </Border.Background>
- -->
-            <Grid Margin="10,0,0,0">
-               
-
                 <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0">
 
 
@@ -127,8 +64,71 @@
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
-                        
                     <!--
+                <Canvas>
+                    <Polygon Points="0 20 230 140 8 278" Fill="LavenderBlush" HorizontalAlignment="Center" Canvas.Top="80" VerticalAlignment="Top"/>
+                    <Polygon Points="0 20 20 40 8 50" Fill="DarkSlateBlue" Margin="50 400" />
+                    <Polygon Points="0 20 80 80 8 150" Fill="DarkSlateBlue"  Margin="200 250"/>
+                    <Polygon Points="0 20 50 50 25 15" Fill="DarkSlateBlue" Margin="250 0" />
+
+
+
+                </Canvas>
+-->
+
+                    <TextBox Grid.Row="1"   Margin="10,0,10,0"  Foreground="#868686" Text="{Binding UserId , Mode=TwoWay}" Height="40" Name="t1"/>
+                    <TextBox Grid.Row="4"   Margin="10,0,10,0" Foreground="#868686"  Text="{Binding  UserFirstName}" Height="40" Name="t2"/>
+                    <TextBox Grid.Column="1" Grid.Row="6"   Margin="10 10" VerticalAlignment="Center" Foreground="#868686" Text="{Binding UserLastName}" Height="40" Name="t3"/>
+
+                    <TextBox Grid.Column="1" Grid.Row="8"   Margin="10 10" VerticalAlignment="Center" Foreground="#868686" Text="{Binding UserEmail}" Height="40" Name="t4"/>
+                    <TextBox Grid.Row="10"  Foreground="#868686" Text="{Binding UserPassword}"  HorizontalAlignment="Left" Width="310" Height="40" Name="t5"/>
+
+                    <TextBlock Grid.Row="0" Text="User ID" Style="{StaticResource text}"  Foreground="SlateGray" Height="30" VerticalAlignment="Top" Margin="10 0"/>
+                    <TextBlock Grid.Row="3" Text="First Name" Style="{StaticResource text}"  Foreground="SlateGray" Height="30" VerticalAlignment="Center" Margin="10 0"/>
+                    <TextBlock Grid.Row="5" Text="Last Name" Style="{StaticResource text}"  Foreground="SlateGray" Height="30" VerticalAlignment="Center" Margin="10 0"/>
+                    <TextBlock Grid.Row="7" Text="Email" Style="{StaticResource text}"  Foreground="SlateGray" Height="30" VerticalAlignment="Center" Margin="10 0"/>
+                    <TextBlock Grid.Row="9" Text="Password" Style="{StaticResource text}" Foreground="SlateGray" Margin="10 0" Height="30"/>
+
+
+
+
+                </Grid>
+
+            </Border>
+
+            <!--Input Section-->
+            <Border Grid.Column="1" Padding="20" MouseDown="Border_MouseDown" Background="White">
+                <!--
+            <Border.Background>
+                
+                <LinearGradientBrush >
+                    <GradientStop Color="DarkBlue" Offset="0"/>
+                    <GradientStop Color="DarkSlateBlue" Offset="1"/>
+                </LinearGradientBrush>
+               
+            </Border.Background>
+ -->
+                <Grid Margin="10,0,0,0">
+
+
+                    <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 0">
+
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+
+                        <!--
                     <Canvas>
                         <Polygon Points="30 150 230 200 180 0" Fill="DarkSlateBlue" HorizontalAlignment="Left" Canvas.Top="95" VerticalAlignment="Top" Canvas.Left="10"/>
                         <Polygon Points="10 10 20 60 80 50" Fill="DarkSlateBlue" Canvas.Left="-12" Canvas.Top="265" />
@@ -139,60 +139,60 @@
 
                     </Canvas>
                     -->
-                        <TextBox Grid.Column="1" Grid.Row="1" Foreground="#868686"  Text="{Binding UserDepartment}" Width="700" Height="35" Name="t6"/>
-                        <TextBox Grid.Column="1" Grid.Row="3"  Foreground="#868686" Text="{Binding UserPhone}" TextChanged="TextBox_TextChanged" HorizontalAlignment="Left" Width="700" Height="35" Name="t7"/>
+                        <TextBox Grid.Row="1" Foreground="#868686"  Text="{Binding UserDepartment}" Height="40" Name="t6" Margin="0,0,10,0"/>
+                        <TextBox Grid.Row="3"  Foreground="#868686" Text="{Binding UserPhone}" TextChanged="TextBox_TextChanged" HorizontalAlignment="Left" Width="330" Height="40" Name="t7"/>
 
-                    <ComboBox ItemsSource="{Binding ModuleList}"   SelectedValue="{Binding SelectedModules, Mode=TwoWay}" Grid.Column="1" Grid.Row="5" Margin="0,20,0,10" Name="myComboBox">
+                        <ComboBox ItemsSource="{Binding ModuleList}"   SelectedValue="{Binding SelectedModules, Mode=TwoWay}" Grid.Column="1" Grid.Row="5" Margin="0,20,0,10" Name="myComboBox">
 
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <CheckBox IsChecked="{Binding IsSelected}" Command="{Binding UpdateModuleSelectionCommand}" 
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <CheckBox IsChecked="{Binding IsSelected}" Command="{Binding UpdateModuleSelectionCommand}" 
           CommandParameter="{Binding}" 
                           VerticalAlignment="Center"/>
-                                    <TextBlock Text="{Binding ModuleName}" 
+                                        <TextBlock Text="{Binding ModuleName}" 
                            Margin="5,0,0,0"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                        
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
 
 
-                    </ComboBox>
-                        <TextBox Grid.Column="1" Grid.Row="7"  Foreground="#868686" Text="{Binding UserUserName}" TextChanged="TextBox_TextChanged" HorizontalAlignment="Left" Width="700" Height="35" Name="t8"/>
-                       
+
+                        </ComboBox>
+                        <TextBox Grid.Row="7"  Foreground="#868686" Text="{Binding UserUserName}" TextChanged="TextBox_TextChanged" HorizontalAlignment="Left" Width="330" Height="40" Name="t8"/>
+
 
 
                         <TextBlock  Grid.Row="0" Text="Department" Style="{StaticResource text}" Foreground="SlateGray"/>
-                    <TextBlock Grid.Row="2" Text="Phone" Style="{StaticResource text}" Foreground="SlateGray"/>
-                    <TextBlock Grid.Row="4" Text="Modules" Style="{StaticResource text}" Foreground="SlateGray"/>
+                        <TextBlock Grid.Row="2" Text="Phone" Style="{StaticResource text}" Foreground="SlateGray"/>
+                        <TextBlock Grid.Row="4" Text="Modules" Style="{StaticResource text}" Foreground="SlateGray"/>
                         <TextBlock Grid.Row="6" Text="UserName" Style="{StaticResource text}" Foreground="SlateGray"/>
-                       
+
 
 
                         <Grid Grid.Column="1" Grid.Row="10" Margin="0 0 0 0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="5*"/>
-                            <RowDefinition Height="6*"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Height="100">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="5*"/>
+                                <RowDefinition Height="6*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Height="100">
 
 
-                        </StackPanel>
+                            </StackPanel>
 
                             <Button Style="{StaticResource addButton}" Margin="0,0,5,0" Content="Cancel"  Command="{Binding  ClearTextBoxesCommand}" />
 
                             <Button Style="{StaticResource addButton}" Margin="0,0,0,00" Content="Save" Command="{Binding AddUserCommand}" Grid.Column="1"/>
+                        </Grid>
+
                     </Grid>
-
                 </Grid>
-            </Grid>
-        </Border>
+            </Border>
 
-    </Grid>
+        </Grid>
     </StackPanel>
 </Window>
