--- a/student-reg-system/student-reg-system/Views/GpaCalculator.xaml
+++ b/student-reg-system/student-reg-system/Views/GpaCalculator.xaml
@@ -35,7 +35,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Border Grid.Column="0" Background="#623ED0" Height="200">
+            <Border Grid.Column="0" Background="#623ED0" Height="250">
 
                 <DockPanel>
                     <!--Menu Logo-->
@@ -50,13 +50,16 @@
 
                         <TextBlock Text="Email" Foreground="White" FontWeight="SemiBold" FontSize="14" Margin="10 1 0 5" TextAlignment="Left" Width="200"/>
                         <TextBlock Text="{Binding StudenEmail}" Foreground="White" FontSize="12" FontWeight="SemiBold" Margin="10 1 0 5" TextAlignment="Left" Width="200"/>
+                        
+                        <TextBlock Text="GPA" Foreground="White" FontWeight="SemiBold" FontSize="14" Margin="10 1 0 5" TextAlignment="Left" Width="200"/>
+                        <TextBlock Text="{Binding Gpa}" Foreground="White" FontSize="12" FontWeight="SemiBold" Margin="10 1 0 5" TextAlignment="Left" Width="200"/>
 
                     </StackPanel>
 
                 </DockPanel>
 
             </Border>
-            <DataGrid Grid.Column="1" Height="300" RowStyle="{DynamicResource DataGridRowStyle1}" Margin="20,10,0,0" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="membersDataGrid" Style="{DynamicResource DataGridStyle1}" ItemsSource="{Binding StudentModuleList}" Width="500" HorizontalAlignment="Left">
+            <DataGrid Grid.Column="1" Height="300" RowStyle="{DynamicResource DataGridRowStyle1}" Margin="20,10,0,0" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="membersDataGrid" Style="{DynamicResource DataGridStyle1}" ItemsSource="{Binding StudentModuleList}" Width="548" HorizontalAlignment="Left">
                 <DataGrid.Columns>
 
                     <DataGridTemplateColumn Header="Module Id" IsReadOnly="True" Width="*">
@@ -92,9 +95,14 @@
             </DataGrid>
         </Grid>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Style="{StaticResource addButton}" Content="Calculate GPA"   Width="117" Height="30" Command="{Binding CalculateGPACommand}" />
-            <TextBlock Width="30"/>
-            <Button Style="{StaticResource addButton}" Content="Save Changes" Width="115" Height="30" Command="{Binding SaveCommand}" />
+            <Button Style="{StaticResource addButton}"  Width="117" Height="40" Command="{Binding CalculateGPACommand}" Margin="0 0 20 0">
+
+                <StackPanel Orientation="Horizontal">
+                    <Icon:PackIconMaterial Kind="Calculator" VerticalAlignment="Center" Margin="0 1 8 0" Width="11" Height="11"/>
+                    <TextBlock Text="Calculate GPA"/>
+                </StackPanel>
+            </Button>
+
         </StackPanel>
 
 
