--- a/student-reg-system/student-reg-system/Views/UserPage.xaml
+++ b/student-reg-system/student-reg-system/Views/UserPage.xaml
@@ -132,26 +132,13 @@
             </DataGrid>
 
             <!--Pagingation Section-->
-            <Border Grid.Row="6" HorizontalAlignment="Right" BorderBrush="#DEE4EC" BorderThickness="1" CornerRadius="5" Padding="5" Background="#ffffff" Margin="0 10 10 10">
+            <Border Grid.Row="6" HorizontalAlignment="Right"  Margin="0 10 10 10">
                 <StackPanel Orientation="Horizontal">
-                    <Button Style="{StaticResource pagingButton}">
-                        <Icon:PackIconMaterial Kind="ChevronLeft" Style="{StaticResource pagingButtonIcon}"/>
-                    </Button>
-                    <Rectangle Width="1" Fill="#DEE4EC" Margin="3 7"/>
-
-                    <Button Style="{StaticResource pagingButton}" Content="1"/>
-                    <Button Style="{StaticResource pagingButton}" Content="2" Background="#7950F2" Foreground="#ffffff"/>
-                    <Button Style="{StaticResource pagingButton}" Content="3"/>
-
-                    <TextBlock Text="..." Foreground="#6C7682" VerticalAlignment="Center" Margin="10 0" FontSize="15"/>
-
-                    <Button Style="{StaticResource pagingButton}" Content="7"/>
-                    <Button Style="{StaticResource pagingButton}" Content="8"/>
-                    <Button Style="{StaticResource pagingButton}" Content="9"/>
-
-                    <Rectangle Width="1" Fill="#DEE4EC" Margin="3 7"/>
-                    <Button Style="{StaticResource pagingButton}">
-                        <Icon:PackIconMaterial Kind="ChevronRight" Style="{StaticResource pagingButtonIcon}"/>
+                    <Button Style="{StaticResource addButton2}" Click="LogOut">
+                        <StackPanel Orientation="Horizontal">
+                            <Icon:PackIconMaterial Kind="Logout" VerticalAlignment="Center" Margin="0 1 8 0" Width="11" Height="11"/>
+                            <TextBlock Text="Log Out"/>
+                        </StackPanel>
                     </Button>
                 </StackPanel>
             </Border>
