--- a/student-reg-system/student-reg-system/Views/GpaCalculator.xaml
+++ b/student-reg-system/student-reg-system/Views/GpaCalculator.xaml
@@ -59,7 +59,7 @@
                 </DockPanel>
 
             </Border>
-            <DataGrid Grid.Column="1" Height="300" RowStyle="{DynamicResource DataGridRowStyle1}" Margin="20,10,0,0" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="membersDataGrid" Style="{DynamicResource DataGridStyle1}" ItemsSource="{Binding StudentModuleList}" Width="548" HorizontalAlignment="Left">
+            <DataGrid Grid.Column="1" Height="300" RowStyle="{DynamicResource DataGridRowStyle1}" Margin="20,10,0,0" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="membersDataGrid" Style="{DynamicResource DataGridStyle1}" ItemsSource="{Binding ModuleList}" Width="548" HorizontalAlignment="Left">
                 <DataGrid.Columns>
 
                     <DataGridTemplateColumn Header="Module Id" IsReadOnly="True" Width="*">
