--- a/student-reg-system/student-reg-system/Views/StudentDataPage.xaml
+++ b/student-reg-system/student-reg-system/Views/StudentDataPage.xaml
@@ -85,18 +85,12 @@
         <TextBlock Text="Filter by" Grid.Row="4" FontSize="13" FontWeight="SemiBold" Margin="0 0 215 0" Foreground="#121518" HorizontalAlignment="Right" VerticalAlignment="Center"/>
 
         <!--Filter Textbox-->
-        <Grid Width="200" HorizontalAlignment="Right" Grid.Row="4">
-            <TextBlock Margin="15 0" VerticalAlignment="Center" Foreground="#B0B9C6" IsHitTestVisible="False"
-                           Panel.ZIndex="1" Text="Search in Members ..."></TextBlock>
 
-
-            <TextBox Name="textBoxFilter" Style="{StaticResource filterTextBox}"/>
-        </Grid>
 
         <!--Members Data Grid-->
         <DataGrid  RowStyle="{DynamicResource DataGridRowStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="membersDataGrid" Style="{DynamicResource DataGridStyle1}" ItemsSource="{Binding StudentList}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="  Id" Binding="{Binding StudentIDStudent }" IsReadOnly="True" Width="0.5*"/>
+                <DataGridTextColumn Header="  Id" Binding="{Binding StudentIDStudent }" IsReadOnly="True" Width="0.6*"/>
 
                 <DataGridTemplateColumn Header="User Name" IsReadOnly="True" Width="1.5*">
                    
@@ -104,7 +98,7 @@
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
                                     <Border Width="25" Height="25" CornerRadius="50" Margin="0 0 10 0" Background="#1098AD">
-                                    <TextBlock Text="{Binding FirstNameStudent[0]}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" Margin="0 0 0 1"/>
+                                    <TextBlock Text="{Binding FirstNameStudent}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" Margin="0 0 0 1"/>
 
                                     </Border>
 
@@ -144,29 +138,7 @@
         </DataGrid>
 
         <!--Pagingation Section-->
-        <Border Grid.Row="6" HorizontalAlignment="Right" BorderBrush="#DEE4EC" BorderThickness="1" CornerRadius="5" Padding="5" Background="#ffffff" Margin="0 10 10 10">
-            <StackPanel Orientation="Horizontal">
-                <Button Style="{StaticResource pagingButton}">
-                    <Icon:PackIconMaterial Kind="ChevronLeft" Style="{StaticResource pagingButtonIcon}"/>
-                </Button>
-                <Rectangle Width="1" Fill="#DEE4EC" Margin="3 7"/>
 
-                <Button Style="{StaticResource pagingButton}" Content="1"/>
-                <Button Style="{StaticResource pagingButton}" Content="2" Background="#7950F2" Foreground="#ffffff"/>
-                <Button Style="{StaticResource pagingButton}" Content="3"/>
-
-                <TextBlock Text="..." Foreground="#6C7682" VerticalAlignment="Center" Margin="10 0" FontSize="15"/>
-
-                <Button Style="{StaticResource pagingButton}" Content="7"/>
-                <Button Style="{StaticResource pagingButton}" Content="8"/>
-                <Button Style="{StaticResource pagingButton}" Content="9"/>
-
-                <Rectangle Width="1" Fill="#DEE4EC" Margin="3 7"/>
-                <Button Style="{StaticResource pagingButton}">
-                    <Icon:PackIconMaterial Kind="ChevronRight" Style="{StaticResource pagingButtonIcon}"/>
-                </Button>
-            </StackPanel>
-        </Border>
 
 
     </Grid>
