--- a/student-reg-system/student-reg-system/Views/GpaCalculator.xaml
+++ b/student-reg-system/student-reg-system/Views/GpaCalculator.xaml
@@ -46,7 +46,7 @@
                         <TextBlock Text="{Binding StudentName}" Foreground="White" FontSize="12" FontWeight="SemiBold"  Margin="10 1 0 5" TextAlignment="Left" Width="200"/>
 
                         <TextBlock Text="Reg No" Foreground="White" FontWeight="SemiBold" FontSize="14" Margin="10 1 0 5" TextAlignment="Left" Width="200"/>
-                        <TextBlock Text="{Binding StudentId}" Foreground="White" FontSize="12" FontWeight="SemiBold" Margin="10 1 0 5"  TextAlignment="Left" Width="200"/>
+                        <TextBlock Text="{Binding StudentIdTestBlock}" Foreground="White" FontSize="12" FontWeight="SemiBold" Margin="10 1 0 5"  TextAlignment="Left" Width="200"/>
 
                         <TextBlock Text="Email" Foreground="White" FontWeight="SemiBold" FontSize="14" Margin="10 1 0 5" TextAlignment="Left" Width="200"/>
                         <TextBlock Text="{Binding StudenEmail}" Foreground="White" FontSize="12" FontWeight="SemiBold" Margin="10 1 0 5" TextAlignment="Left" Width="200"/>
