--- a/student-reg-system/student-reg-system/Views/UserPage.xaml
+++ b/student-reg-system/student-reg-system/Views/UserPage.xaml
@@ -52,13 +52,13 @@
             <TextBlock Text="{}" Grid.Row="1" FontSize="28" FontWeight="SemiBold" Margin="0 50 0 0" Foreground="#121518" HorizontalAlignment="Left"/>
 
             <!--Add Button-->
-            <Button Style="{StaticResource addButton}" Click="Button_Click_1">
+            <Button Style="{StaticResource addButton}" Click="Button_Click_1" Margin="40 ">
                 <StackPanel Orientation="Horizontal">
                     <Icon:PackIconMaterial Kind="Plus" VerticalAlignment="Center" Margin="0 1 8 0" Width="11" Height="11"/>
                     <TextBlock Text="Add New User"/>
                 </StackPanel>
             </Button>
-            <Button Style="{StaticResource addButton2}" Click="Button_Click">
+            <Button Style="{StaticResource addButton2}" Click="Button_Click" Margin="40">
                 <StackPanel Orientation="Horizontal">
                     <Icon:PackIconMaterial Kind="Plus" VerticalAlignment="Center" Margin="0 1 8 0" Width="11" Height="11"/>
                     <TextBlock Text="Add New Module"/>
@@ -69,28 +69,28 @@
             <Separator Height="1" Grid.Row="3" Background="#DAE2EA" Margin="0 -1 0 10"/>
 
             <!--Tab buttons-->
-            <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 10 0 0">
-                <TextBlock Text="Academic Year 22/23" Grid.Row="1" FontSize="23" FontWeight="SemiBold" Margin="0 50 0 0" Foreground="#121518" HorizontalAlignment="Left"/>
+            <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 10 0 0" Height="50">
+                <TextBlock Text="" Grid.Row="1" FontSize="23" FontWeight="SemiBold" Margin="0 50 0 0" Foreground="#121518" HorizontalAlignment="Center"/>
 
             </StackPanel>
 
             <!--Counter Title-->
            
-            <TextBlock Text="Filter by" Grid.Row="4" FontSize="13" FontWeight="SemiBold" Margin="0 0 215 0" Foreground="#121518" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <TextBlock Text="" Grid.Row="4" FontSize="13" FontWeight="SemiBold" Margin="0 0 215 0" Foreground="#121518" HorizontalAlignment="Right" VerticalAlignment="Center"/>
 
 
             <!--Members Data Grid-->
-            <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="membersDataGrid" Style="{DynamicResource DataGridStyle1}" ItemsSource="{Binding Path=UsersList }" >
+            <DataGrid RowStyle="{DynamicResource DataGridRowStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" x:Name="membersDataGrid" Style="{DynamicResource DataGridStyle1}" ItemsSource="{Binding Path=UsersList }" Width="900">
                 <DataGrid.Columns>
                    
 
-                    <DataGridTextColumn Header=" Id  " Binding="{Binding   IDUser}" IsReadOnly="True" Width="0.5*"/>
-                    <DataGridTemplateColumn Header="User" IsReadOnly="True" Width="1.5*">
+                    <DataGridTextColumn Header=" User Id  " Binding="{Binding   IDUser}" IsReadOnly="True" Width="0.5*"/>
+                    <DataGridTemplateColumn Header="Name" IsReadOnly="True" Width="1.5*">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel Orientation="Horizontal">
                                     <Border Width="25" Height="25" CornerRadius="50" Margin="0 0 10 0" Background="#1098AD">
-                                        <TextBlock Text="{Binding FirstNameUser}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" Margin="0 0 0 1"/>
+                                        <TextBlock Text="{Binding FirstNameUser[0]}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White" Margin="0 0 0 1"/>
 
                                     </Border>
 
